--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -130,3 +130,5 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 「自分が悪い」と考えて反省するのはいいけど、重要なのは行動に反映させることであって、いつまでも悩むのは無駄。逆に、行動を変えなくてもうまくいってるなら「自分が悪い」という認識自体が間違っている。行動を変えても変わらない場合も自分は関係ない。
 
 劣った人を避けるのは、他責というよりその前の段階。責任が取れるレベルにない人を排除する。あとで「あいつのせいで失敗した」と言うのは誰でもできる。
+
+本当にやりたいことがあったら、自分でやる。
