--- a/shared/commerce/marketing/参入障壁.md
+++ b/shared/commerce/marketing/参入障壁.md
@@ -7,3 +7,7 @@
 法律や倫理のグレーゾーンは参入障壁が高い。
 悪人とかブランドを気にしない新規の事業者は価値を生み出しやすい。
 さすがに思いっきり外れると捕まるけど。
+
+新規参入で規模が小さいと、まずは質で勝負というか、新しいものを生み出すことになりがち。
+「量が足りない」系の課題は新規参入が難しい。
+でも今の社会だと大体なんでも手に入るから新規開発も難しい。
