--- a/shared/commerce/商業.md
+++ b/shared/commerce/商業.md
@@ -94,3 +94,5 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 
 商人なら利を取るべき。
 ただし、目先の利益だけでなく、何年も先の利益を見ないといけない。違法な取引で捕まったり、恨みを買って殺されたりするのを利とは言えない。
+
+自分で持ちきれないくらい仕事が来ると、下請けに回したりして仕事を紹介するのも仕事になる。卸業みたいなもの。
