--- a/shared/human/being/経済的安定.md
+++ b/shared/human/being/経済的安定.md
@@ -22,3 +22,6 @@
 
 経済的安定とは、貯蓄が多いことではなく、収入が安定していること。
 貯蓄は一時的に収入を補ってくれるだけ。
+
+安定収入を得るための活動は週3くらいに抑えて、もっと儲けられるようにリスクを取らないと労働からは抜け出せない。
+そもそも生きるためだけに週5も働くのはコスパが悪い。
