--- a/shared/success/cost/tips/人件費の削減.md
+++ b/shared/success/cost/tips/人件費の削減.md
@@ -4,3 +4,5 @@
 
 三交代制で24時間動いているサービスなら、どれだけ業務を効率化しても3人以下にはならない。
 休みなども考えると実際には5,6人が最低値のはず。
+
+依頼の量には波があるので、最大の波を自社だけで対処しようとするとそれ以外のランニングコストが高くなりすぎる。業務委託などで柔軟に雇ったり切ったりして調整する。
