--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
@@ -76,6 +76,10 @@
 
 ## 戦術指示
 
+戦術の数字はあまり関係ない。好きなのを選ぶ。
+
+数字が7の場合、三振したりホームランを打たれたりする極端な結果になりやすい印象。
+
 戦術の数字は、うまくいく確率というよりも、その通りに実行される確率と考えた方がいい。
 実行しても状況と合っていないと失敗する。
 センター返しや流し打ちが7でも正面に飛んでフライになることもある。
