--- a/games/Street-Fighter/Six/攻めの基本.md
+++ b/games/Street-Fighter/Six/攻めの基本.md
@@ -30,6 +30,12 @@
 
 上級者になると、遅らせ打撃（グラ潰し）がここに加わる。特に端。中央では投げ抜けを捨てることもある。
 
+## フレーム有利
+
+技を相手にガードさせたら、その距離で届く相手の最速技（密着なら4F技）に有利フレーム+2した発生の技までは使っていい。
+例えば、密着で+2取れたら、8F技までは使っていい。むしろ遅らせることで投げ抜けやジャストパリィもしにくくなるし、遅らせ小パンがズレてカウンターになることもある。
+ただ、そればかりだと最速暴れで割り込まれたりするので最後は読み合い。でもまずは最速暴れが来ない前提でいい。
+
 ## その他
 
 攻めの基本は、暴れを潰すこと、投げで崩すこと、投げ抜けにリスクを与えること、無敵技にリスクを与えること。
