--- a/shared/collaboration/organization/人事評価.md
+++ b/shared/collaboration/organization/人事評価.md
@@ -31,3 +31,6 @@ https://jinji.jp/samplesheet/evaluation-list/
 
 仕事では上司が部下を評価しないといけないけど、同僚としては人間として接するべき。ここに齟齬が生まれやすい。
 評価というのは本来人間扱いではない。
+
+「やらない人」を動かそうとするのではなくて、「やる人」を正当に評価する。
+「やらない人」は自然といづらくなる。
