--- a/shared/cooking/tips/肉を柔らかくする.md
+++ b/shared/cooking/tips/肉を柔らかくする.md
@@ -27,3 +27,7 @@ https://oceans-nadia.com/user/236306/recipe/382329
 脂身は水分が抜けやすくなってもいいので、穴を空けて柔らかくするといい。
 
 肉は筋が残っていると縮んで固くなってしまうので、フォークで適当に穴を開けたり、包丁で筋を切ったりすると縮まらない。
+
+## メモ
+
+火を入れずに肉が柔らかいのは当たり前。安全に食べられるようにしっかり火を入れた上で柔らかくするのがプロ。
