--- a/shared/design/設計.md
+++ b/shared/design/設計.md
@@ -189,3 +189,5 @@ https://qiita.com/bisketoriba/items/116e73224232703b3965
 隅研吾みたいに実用性のないお飾りのデザインしかできないのはどれだけそれが綺麗でも建築家とは言えない。
 
 外観としてのインタフェースと、構造としてのインタフェースがある。
+
+機能設計の段階でダサいと画面設計で取り返すのは厳しい。まず機能設計の段階でモデルを洗練して、機能を絞るのが基礎。
