--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -64,3 +64,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 ハモリはとにかく原曲を正確に覚えて歌えるところから。目立ちすぎないように声やビブラートは抑える。
 
 ハモリは、上ハモ、下ハモ、ずらし、に分ける。メインメロディを上か下にずらしたものと、それ以外。ずらしはメインメロディと違うメロディで歌う。
+
+ハモリは雑音が少ない声で歌わないと点描の唄みたいにバラバラな感じになる。雑音が多い声も個性だけど、ハモリには向いてない。
