--- a/shared/singing/ボーカルトレーニングの順序.md
+++ b/shared/singing/ボーカルトレーニングの順序.md
@@ -102,3 +102,5 @@ https://youtu.be/4KpIMgw1oI0?si=A0Dlpn-YT3uZifO_
 まぁ、プロ並みを目指さないなら裏声を使うとか楽で簡単なルートもあるんだけど。
 
 まずは音程が正しくなくても、喉の力を抜いて、腹から声を出す練習から。喉の力を抜いた声が地声。あと首は外向きに力を入れて、喉を広げる感覚で声を出す。
+
+声質の改善をしている間は歌の練習の段階ではない。歌の練習をしてもどうせ声の出し方が変わったらまた調整しないといけない。ただ、リズムとか、音楽の基礎練習はした方がいい。
