--- a/shared/leisure/examples/karaoke/カラオケの店.md
+++ b/shared/leisure/examples/karaoke/カラオケの店.md
@@ -1,3 +1,16 @@
+## まねきねこ
+
+- 平日が安い
+- 朝うたがとても安い
+- 会員ランクを維持しやすい
+
+## 歌広場
+
+- 深夜が安い
+- 会員ランクを維持しにくい
+
+## その他
+
 深夜に入るなら歌広場が安くて朝遅くまでいられる。
 まねきねこは 24h 営業だけど、5 時に区切りがあるので高い。
 基本的にカラオケマックも 5 時閉店、パセラが 6 時閉店。
@@ -15,3 +28,5 @@
 まねきねこの朝カラでも1時間半くらいならワンドリンクでいい。2時間超えるならドリンクバーにしないと足りない。
 
 まねきねこの朝うたがドリンクバーになって1.5h以下が安くなったので、1hくらいで頻繁に行ってもいい。
+
+まねきねこはダイヤ会員になると平日のフリータイムも1000円くらいで入れる。
