--- a/shared/singing/tips/音程を合わせる.md
+++ b/shared/singing/tips/音程を合わせる.md
@@ -58,3 +58,6 @@ https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
 
 歌の練習として、ドレミで音を出せるようにチューナーを使ってチューニングしないといけない。しばらく練習して声の出し方が変わってくるとチューニングもずれやすいし、その日の調子によっても少し変わる。
 ぴったり合わせて安定させることで、1Hz単位で上下させる練習にもなる。
+
+まずは最低音が標準で、そこから上げることで高い音を出す。
+変なところを標準にして、上げたり下げたりしようとするのは不安定になりやすい。
