--- a/shared/success/risk/management/リスクを抑える.md
+++ b/shared/success/risk/management/リスクを抑える.md
@@ -9,3 +9,10 @@
 リスクを避けることで試行回数が減ってしまっては意味がない。
 
 不安定になったら開発よりもチューニングが先。
+
+期間が長くなるほど不確実なことが起きる機会が増えて、リスクが増える。
+
+ただ早く着手するだけで完了できないと、期間はむしろ長くなってしまう。
+早く着手することよりも、期間を短く抑えることが重要。
+
+商売では他の参入者に需要を持っていかれるのもリスクで、遅れをとるほどリスクも大きくなる。余計な機会を増やさない。
