--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -6,9 +6,13 @@
 低音は声帯のサイズが関係しているので、どれだけ技術があっても限界がある。
 
 低音は才能。
-喉の長さによって最低音も決まる。
+喉の長さによって最低音も決まる。基本的に身長が高いほど声は低くなりやすい。
 ただ、その人の最低音がまだ出ていないならまだ低くなる可能性はある。
 
 声帯を伸ばしていない、基準の状態が一番低い音であるべき。
 
 喉を下げて、空間が広がるほど低い声になる。
+
+身長165cmでもG2は楽に出るから、同じ身長の男でそれくらいの低音が出せないのは何かおかしい。
+
+ほとんどの人はちゃんと鍛えてないせいで低音が出にくい。
