--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -46,6 +46,7 @@
     - 2MK
     - 垂直HJ中空バニ: シミー、しゃがみ攻撃も避けて当たる
       - {ガード}: 後退がシミーになる投げ間合いで+1
+      - {ジャンプ}: 当たらない
       - {DI}: 避けて+22
       - {Dリバ}: 避けて裏から当たる
   - 中バニ, 2MP
@@ -201,6 +202,8 @@
   - 前進(2F以上), 前投げ
   - {中央}
     - 後退: 後方受け身にシミー
+    - 前J 中空バニ: 23F遅れ、裏周り、ガードされて-2
+    - 中バニ: 18F遅れ、裏周り、ガードされて-2
   - {端}: 前投げと同じ
 - DR 弱セイスモ
 
@@ -209,12 +212,14 @@
 ## セイスモ, JC 強空バニ, 中サンダーPP: 30
 
 - DR 6MP
-- 強バニ(+4): ガードされて+2の密着、ヒットして+42
+- 強バニ(+4): ガードされて+2の密着、下がれない、ヒットして+42
 - ステップ: +9
+  - 前進(5F以上), 前投げ
   - 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
     - 前HJ中空バニ: めくり
     - {ヒット}: 2MP
     - {ガード}: 投げ間合いの外で+1
+  - 前J中空バニ: 21F遅れ、裏周り、ガードされて-2
 - {中央}
   - 中セイスモ
     - {DI}: 返せる
