--- a/shared/study/学問の分野.md
+++ b/shared/study/学問の分野.md
@@ -1,8 +1,29 @@
-- Philosophy 哲学
-- Science 科学
-- Math 数学
-- Biology 生物
-- Economics 経済
-- Ethics 倫理
-- Physics 物理
-- Politics 政治
+## 基礎分野
+
+- 自然科学
+  - 物理学 Physics
+    - 力学 Mechanics
+    - 電磁気学
+  - 生物学 Biology
+  - 化学 Chemistry
+- 人文学
+  - 哲学 Philosophy
+    - 美学
+    - 倫理学 Ethics
+  - 文学 Literature
+  - 言語学
+  - 歴史学
+- 社会学
+  - 政治学 Politics
+  - 経済学 Economics
+  - 経営学 Business & Management
+  - 法学 Law
+- 論理学
+  - 数学 Mathematics
+
+## 応用分野
+
+- 工学
+  - 情報工学
+  - 機械工学
+- 医学
