--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -96,8 +96,14 @@ LP 2回から直接強サンダーに繋ぐのが無難。
 
 - 2HP, 強サンダーC, 2MP, 弱サンダーPP: 2540
 - 2HP, 強サンダーC, 2MP, 弱バニPP: 2680
-- 2HP, 強サンダーC, 2MP, 弱サンダーPP, SA3: 4540
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, 強サンダーPP: 3540
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, SA1(60%): 3950
 - 2HP, 強サンダーC, 2MP, ODサンダー, SA2(60%): 4480
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, SA2(60%): 4550
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, ODバニ, SA2: 4850
+- 2HP, 強サンダーC, 2MP, 弱サンダーPP, SA3: 4540
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, SA3(60%): 5150
+- 2HP, 強サンダーC, 2MP, ODセイスモ, JC 強空バニ, ODバニ, SA3: 5650
 
 弱セイスモよりもヒット確認しやすいルート。
 
