--- a/games/pokemon/battle/ポケモンの役割.md
+++ b/games/pokemon/battle/ポケモンの役割.md
@@ -20,20 +20,40 @@
 全てのポケモンを突破したり完封したりできるポケモンはまずいない。
 補助によってそれを可能にするのが積み構築。対面構築の一種。
 
-## 突破
+## 突破（エース）
 
-- 抜く（先制技）
-- 受けを破壊する（高火力、広範囲、火力積み）
+- 抜き
+  - 素早さ高
+  - 先制技
+- 受け破壊
+  - こだわりハチマキ・メガネ
+  - 火力積み
 
-## 完封
+## 完封（耐久エース）
 
-- 受け潰す（耐久積み、回復技）
+- 受け潰し
+  - 耐久積み
+  - 回復技
 
-## 補助
+## 補助（サポート）
 
-- 受け流す・クッション（相性補完）
-- 積みの起点を作る（ねむり、まひ、やけど、デバフ）
-- 有利対面を作る（交代技）
-- 体力を削る（設置技、強制交代技）
-- すばやさを落とす（まひ、ねばねば）
-- 技選択を制限する（こだわりトリック、アンコール）
+- 受け流し・クッション（相性補完）
+  - あくび
+  - ふきとばし・ほえる
+  - のろい
+  - 交代技
+- 積みの起点を作る
+  - 壁
+  - 状態異常技
+  - デバフ技
+- 抜きの地盤を作る
+  - でんじは
+  - ねばねばネット
+- 対面操作
+  - 交代技
+- 削り
+  - 設置技
+  - どく
+- 妨害
+  - こだわりトリック
+  - アンコール
