--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -248,3 +248,7 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 息の圧を高めるときは息を止める感覚。それだけで声は出ない。息の圧を高めた上で、腹筋で少しだけ息を送る。
 
 息を強く吐くときでも表面の腹筋は硬くしない。内側だけ。
+
+腹で息を強くするより、喉で絞る方が楽だし簡単。でも良い声にはならない。
+
+体の中に空気を多く取り込んで、肋間筋や腹筋、背筋で外から内に圧をかける。
