--- a/shared/chemistry/tips/化学を学ぶ.md
+++ b/shared/chemistry/tips/化学を学ぶ.md
@@ -75,3 +75,5 @@
 有機化学がわざわざ分けられているように、炭素Cは特に重要。さまざまな構造を作る基礎になっている。
 
 酸性と塩基性が数あるイオンの中でも重要視されるのは、水が生成されるため。人にとって水が重要だからというだけ。
+
+化学の状態や反応は実際に見て覚えるのが一番だけど、一回だけだと忘れやすい。
