--- a/shared/cooking/tips/食材を用意する.md
+++ b/shared/cooking/tips/食材を用意する.md
@@ -5,3 +5,5 @@
 ただ、量が多いようなら自分で冷凍するのもあり。ニラとか。
 
 トマトペーストはカレーとかパスタとか一人暮らしに便利だけど、冷蔵庫を圧迫するのだけ問題。
+
+白菜やキャベツなどの葉野菜は大きめのざく切りにして冷凍しておけばスープの具になる。長く置くとボロボロになりがちなので早めに使った方がいい。
