--- a/shared/decision/planning/イテレーション.md
+++ b/shared/decision/planning/イテレーション.md
@@ -2,3 +2,6 @@
 
 リリースサイクルが1週間を切るようならイテレーションにこだわらなくてもいい。
 ただ、そこまでリリースサイクルを早められるチームはなかなかない。
+
+イテレーション開発にも2種類ある。
+いわゆるアジャイルのように短い期間で常に完成品を作って拡大していく方法と、ウォーターフォールを短い期間で区切ってチェックしながら部品を作っていく方法だ。
