--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -1,3 +1,14 @@
+## 曲を覚えるコツ
+
+- 音源を何度も聴く
+- いきなり全部覚えようとしない
+  - とりあえずサビを覚える
+- 手拍子を合わせる
+- ブレスの位置を覚える
+- 一つのパートだけ抜き出した音源も聴く
+
+## メモ
+
 まずは何度も聴くのが基本。
 よく聴いて、特徴を捉える。
 
@@ -131,3 +142,5 @@
 
 歌詞やパート分けは歌詞カードを見ながら歌う手もある。まぁ、歌詞はできれば覚えた方がいい。繋ぎがスムーズになる。
 メロディは譜面を曲の速度で辿るのがそれはそれで慣れが必要。
+
+いきなり全部覚えようとせずに、とりあえずサビだけ覚えるのも大事。まずは雰囲気歌えるようにする。
