--- a/shared/technique/基礎と応用.md
+++ b/shared/technique/基礎と応用.md
@@ -45,3 +45,6 @@ installation と advanced の対応もあり。
 組み合わせることを考える。少ない手札でやりくりする経験が役に立つ。
 
 基礎がないと遊べない。遊びの余地を広げるのが重厚な基礎だ。
+
+基礎があっても、それを適切に組み合わせないと応用できない。
+応用のための組み合わせには時間がかかることもあり、よく使うものはもう組み合わせた状態で丸暗記してしまった方が便利。
