--- a/shared/technique/理論.md
+++ b/shared/technique/理論.md
@@ -90,3 +90,5 @@
 実践を繰り返すことで経験を積んで、良いパターンを早く作れるようになる。
 
 理論は知識の一種。抽象化された、技術的な情報。
+
+「正しくない」方法としては、「長続きしない」方法がひとつ。まぁ、一発屋で短期的に売れてあとは慎ましやかに暮らすのも人生ではあるけど。
