--- a/shared/work/ウォーターフォールとイテレーション.md
+++ b/shared/work/ウォーターフォールとイテレーション.md
@@ -76,3 +76,5 @@ https://blog.sa2taka.com/post/waterfall-is-missing/
 
 ウォーターフォールは「製品の完成」をゴールにしているのがそもそも間違っている。
 「製品の完成」は過程でしかない。必要なのはその製品を使って仕事を効率化したり、ビジネスを成功させたりすること。
+
+そもそもウォーターフォールは開発手法とは言えない。一度で最も良いものが作れるなら誰も苦労しない。ウォーターフォールは開発ではなく製造の手法。製造というのは、すでに開発されて完成したものを量産すること。
