--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -1,6 +1,6 @@
 ## 概要
 
-`2HP, 弱セイスモ, JC 強バニ`のコンボがあらゆるところで出てくる。
+`2HP, 弱セイスモ, JC 中空バニ`のコンボがあらゆるところで出てくる。
 中/強サンダーやSA、`ODバニ, SA2/3`が繋がるので汎用性も高い。
 モダンならAC3なので簡単。ただ、MPやHKがないので、それ以外のコンボを伸ばしにくい。
 
@@ -59,36 +59,36 @@ LP 2回から直接強サンダーに繋ぐのが無難。
 - 2MP, 弱サンダーPP: 1980
 - 2MP, ODサンダー: 2200
 - 2MP, ODセイスモ, JC 強バニ, ...: ダメージは2HP, 弱セイスモと同じ
-- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
-- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
+- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, 中/強サンダー
+- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA2/3
 
 ## 2MP(c): 7 (25)
 
-- 2MP(c), 弱セイスモ, JC 強空バニ, 強サンダーPP: 3070
-- 2MP(c), 弱セイスモ, JC 強空バニ, SA3(70%): 4940
+- 2MP(c), 弱セイスモ, JC 中空バニ, 強サンダーPP: 3070
+- 2MP(c), 弱セイスモ, JC 中空バニ, SA3(70%): 4940
 - 2MP(c), 弱セイスモ, ODバニ, SA3: 4620
 
 ## 2MP(pc)
 
-- 2MP(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- 2MP(pc), 2HP, 弱セイスモ, JC 中空バニ, 中/強サンダー
 
 +6の最大コンボ。
 
 ## 2HP: 2 (24)
 
 - 2HP, 弱セイスモ, 強サンダー: 2220
-- 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー: 2850
+- 2HP, 弱セイスモ, JC 中空バニ, 中/強サンダー: 2850
 - 2HP, 弱セイスモ, ODバニ: 2700
-- 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP: 3120
-- 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3150
+- 2HP, 弱セイスモ, JC 中空バニ, 中サンダーPP: 3120
+- 2HP, 弱セイスモ, JC 中空バニ, 強サンダーPP: 3150
 - 2HP, 弱セイスモ, SA1(80%): 3100
-- 2HP, 弱セイスモ, JC 強バニ, SA1(70%): 3620
+- 2HP, 弱セイスモ, JC 中空バニ, SA1(70%): 3620
 - 2HP, 弱セイスモ, SA2(80%): 3900
-- 2HP, 弱セイスモ, JC 強バニ, SA2(70%): 4320
-- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2(50%): 4770
+- 2HP, 弱セイスモ, JC 中空バニ, SA2(70%): 4320
+- 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA2(50%): 4770
 - 2HP, 弱セイスモ, SA2(80%): 4700
-- 2HP, 弱セイスモ, JC 強バニ, SA3(70%): 5020 (AC3)
-- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
+- 2HP, 弱セイスモ, JC 中空バニ, SA3(70%): 5020 (AC3)
+- 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA3: 5270
 
 中サンダー締めは最低空でないと繋がらない。モダンならAC3があるので安定。
 
@@ -123,14 +123,14 @@ LP 2回から直接強サンダーに繋ぐのが無難。
 ## 2HP(pc), 強サンダーC: 10
 
 - 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 弱/中/強サンダー
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3740
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA1(60%): 4150
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA2(60%): 4750
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5050
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA3(60%): 5350
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP, SA3: 5790
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5850
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, 中/強サンダー
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, 強サンダーPP: 3740
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, SA1(60%): 4150
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, SA2(60%): 4750
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA2: 5050
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, SA3(60%): 5350
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, 中サンダーPP, SA3: 5790
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA3: 5850
 
 ## 2MK: 5
 
@@ -172,7 +172,7 @@ LP 2回から直接強サンダーに繋ぐのが無難。
 
 ## DR 6HK(c): 10
 
-- DR 6HK, 2HP, 弱セイスモ, JC 強空バニ, 強サンダーPP: 3400
+- DR 6HK, 2HP, 弱セイスモ, JC 中空バニ, 強サンダーPP: 3400
 
 2段目が当たるくらいで振ると判定が強くて潰しやすい。
 
@@ -209,9 +209,9 @@ ODの場合は600(M:440)ダメージ伸びる。
 
 ## セビ(L3)
 
-- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 4320 (M:3920)
-- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5620 (M:5220)
-- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 6420 (M:6020)
+- ODセビ(L3), 2HP, 弱セイスモ, JC 中空バニ, 強サンダーPP: 4320 (M:3920)
+- ODセビ(L3), 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA2: 5620 (M:5220)
+- ODセビ(L3), 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA3: 6420 (M:6020)
 
 ODセビは2000ダメージ、通常のセビは1400ダメージ。
 モダンはODセビが1600ダメージ、通常のセビが1120ダメージ。
@@ -255,8 +255,8 @@ HKで拾うコンボが結構あるのでMきついかも。
 - HP(c), LK
 - 6HK(c), 2MP
 
-- 2HP, 弱セイスモ, JC 強バニ, ODバニ
-- 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
+- 2HP, 弱セイスモ, JC 中空バニ, ODバニ
+- 2HP, 弱セイスモ, JC 中空バニ, SA1/2/3
 
 - ODセイスモ, HJ.MP, 強空バニ
 
