--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
@@ -10,6 +10,8 @@
 セイスモにパリィを合わせて、相手がキャンセルしてもしなくてもラッシュするのは一つの手。
 セイスモフェイントは27Fあるので、ラッシュが速いキャラなら確定する場合もある。
 
+大パンサンキャンを繰り返してドライブゲージを削ってくる場合は後退で避けて差し返す。変に手を出すのは良くない。
+
 ## その他
 
 ヴァイパーは後退がシミーになる場面があまりない。できれば覚えたい。最速投げ暴れは択の一つ。
