--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの相性.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの相性.md
@@ -14,8 +14,13 @@
 ## ダルシム
 
 技が長くてセイスモ使いにくい。強なら読み合い。
-ただ、中距離から中空バニで無理やり触ってもいい。HJ無しで十分。直接HJで突っ込むのもいい。
+
+中距離から中空バニで無理やり触ってもいい。HJ無しで十分。直接HJで突っ込むのもいい。
 
 ## ジェイミー
 
 セビも割られるし突進技もあって差し合いきつい。
+
+## リリー
+
+めくりを狙うとSA2で落とされることがある。
