--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -1,11 +1,12 @@
 ## セイスモコンボ
 
-- 2HP, 弱セイスモ, JC 強空バニ, 中サンダーPP
+- 2HP, 弱セイスモ, JC 中空バニ, 中サンダーPP
   - ステップ, 前進
     - 2HP, ...
     - 前投げ
     - 後退
-- 2HP, 弱セイスモ, JC 強空バニ, SA
+- 2HP, 弱セイスモ, JC 中空バニ, SA1/2/3
+- 2HP, 弱セイスモ, JC 中空バニ, ODバニ, SA2/3
 
 モダンならAC3で簡単。
 
@@ -54,29 +55,28 @@
     - 前投げ
     - ガード: 投げられない距離で止まる
       - {通常投げ}, 2HP, ...
-  - 中バニ(+4)
-    - {ヒット}
-      - 前J.HP: 詐欺飛び
-    - {ガード}
-      - 前投げ
-      - 後退
-        - {通常投げ}, 2HP, ...
+      - {何もしない}, 前進, 前投げ, ...
 
-## 2HPに繋ぐ
+## 2HPに繋ぐコンボ
 
 - 2MP, DR 2HP, 強サンダーC, 2HP, ...
+- {Dリバ}, 2MP(pc), 2HP, ...
+- 2HP(pc), 強サンダーC, 2HP, ...
 - DR 2MK, 2HP, ...
 - DI(pc), 2HP, ...
 - DI(壁), 2HP, ...
-- {Dリバ}, 2MP(pc), 2HP, ...
+
+## 小技のヒット確認
+
+- LP 2回, 強サンダーPP
+
+<!----------------------------------------------------------------------------->
 
 ## 遠めの強攻撃から弱サンダーに繋ぐコンボ
 
 - 2HP, 強サンダーC
   - {カウンターヒット}, 2MK, JC 弱サンダーPP
   - {ガード}, ガード
-
-<!----------------------------------------------------------------------------->
 
 ## 小技から強サンダーに繋ぐ
 
