--- a/shared/singing/tips/歌詞カードを作る.md
+++ b/shared/singing/tips/歌詞カードを作る.md
@@ -4,10 +4,15 @@
 
 1. テンポ（BPM）を記載する
 2. 歌詞を写す
-3. 全体の抑揚（サビとクレッシェンド、デクレッシェンド）を記載する
-4. リズム（拍子とアクセント）を記載する
-5. スタッカートにして短く切る位置を記載する
-6. ロングトーンにして長く伸ばす位置を記載する
+3. 全体の抑揚を記載する
+   1. サビを区切る
+   2. メロディを詳しく区切る
+4. リズムを記載する
+   1. アクセントの位置を記載する
+   2. ブレスの位置を記載する
+   3. スタッカートにして区切る位置を記載する
+   4. ロングトーンにして長く伸ばす位置を記載する
+5. 細かい抑揚を記載する
 
 ## その他、記載しておくと便利なこと
 
