--- a/shared/community/tips/いじめ.md
+++ b/shared/community/tips/いじめ.md
@@ -7,3 +7,5 @@
 
 狭い共同体意識では、異物を「外」に「排除する」ことで問題を解決しようとする。
 広い共同体意識では、「外」がないのでそもそも排除することを考えるより、「内」でなじませることを第一に考える。
+
+いじりはいじめの前段階だけど、いじめたいというよりは、相手の安全性を確認している。安心できないと排除する段階に移行する。いじりの段階で自己開示できなかったりして安全性が確認できないといじめられやすい。
