--- a/shared/human/mind/心は習慣.md
+++ b/shared/human/mind/心は習慣.md
@@ -45,5 +45,11 @@
 何かをやめたい時は、代わりの習慣を設定する。
 元々付いていた悪習慣と同じトリガーに別の習慣を上書きすることでしか、習慣はなくならない。
 
-「人格は繰り返す行動の総計である。 それゆえに優秀さは単発的な行動にあらず、習慣である。」
+「人格は繰り返す行動の総計である。それゆえに優秀さは単発的な行動にあらず、習慣である。」
 （アリストテレス）
+
+心が疲弊するというのは、単に習慣が崩れるということ。
+
+感情、人格、性格。
+
+仕事や趣味よりも習慣を重視する。自分の心をまず守る。
