--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -74,3 +74,7 @@ http://hira0888.life.coocan.jp/asu124.html
 
 良い声とは肺活量のある、強い息の声。
 良い声を出す練習というのは、息を強くして、喉で邪魔しないための練習。せっかく息が強くても喉が締まって邪魔したら生かしきれない。
+
+正しい声の出し方ではないけど、絶妙なバランスで良い声になっている場合がある。
+ミセスは鼻声だし、アイナ・ジ・エンドは声が細かく震えてるし、優里やAdoはずっとがなってる。それでも良い声。
+天性のものなので、他の人が真似してもうまくいかない。もしかしたら自分に合う場合もあるけど、合わなかったらやめるべき。
