--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -181,3 +181,5 @@ https://diamond.jp/articles/-/49655
 組織には無能を排除する仕組みが必要。定量的な競争。恣意的になると無能を排除できない。政治が入り込まないようにしないといけない。組織内の政治は無駄。
 
 組織における栄養は情報と金と人。それらを消化して、分解して、各部に届ける。
+
+行動を統一するか、目的を共有するか。
