--- a/shared/development/早すぎる最適化.md
+++ b/shared/development/早すぎる最適化.md
@@ -1,3 +1,5 @@
 早い段階で細かい改善を始めても、大きな改善でまとめて廃止されてしまう場合もある。早すぎる最適化をやめて、まずは価値の高いストーリーやフィーチャーから取り込む。
 
 品質はできるだけ早い段階で8割を目安に高めて、早い段階で検証するのが大事。検証を元に真の要求を明らかにして、当初の予定より少しでも良いものを目指す。
+
+細かい設計が早すぎるとコンセプト自体が変わった場合に対処できない。まずは動かせるようにしてフィードバックする。仕様が固まってきたら再設計する。
