--- a/shared/communication/コミュニケーションの成功.md
+++ b/shared/communication/コミュニケーションの成功.md
@@ -22,3 +22,5 @@
 相手を不安にさせるのはコミュニケーションとは言えない。
 情報は客観的にはリスクを、主観的には不安を軽減するものだ。
 もし客観的にはリスクを軽減するものでも、主観的には不安を煽るなら受け入れられないことが多い。
+
+コミュニケーションは誰かを動かして出力や間接的な利益を得るために行う。好きなものを好きになってほしいとか、儲けたいとか、利益はさまざま。相手が動かないならコミュニケーションはうまく行ってない。
