--- a/shared/music/vocal/歌手.md
+++ b/shared/music/vocal/歌手.md
@@ -20,3 +20,12 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 
 リズムやメロディなどの技術的な基礎はできていて当然。上手くて当然。
 歌手になるであれば、その上でまず声が良くないといけない。技術よりもまず良い声を目指す。
+
+一流の歌手を目指すのと一流の作曲家を目指すのは方向性が違う。
+
+オペラ歌手なんかは別の作曲家が作った曲を歌うので、歌が一流でないと他の歌手と差別化できない。
+
+歌手としては二流三流でも作詞や作曲の面で優れているアーティストはいる。オリジナル曲を発信するアーティストは特に歌よりも曲が重要。
+でも作曲しないのに歌が二流三流だったら誰かに聴かせるものとしては価値が低い。
+
+感動する声でなくても曲の歌詞やメロディで感動することはある。特にポップスみたいな楽しい感じの曲はリズムだけでも楽しく感じられるものがある。
