--- a/shared/joke/ボケの例.md
+++ b/shared/joke/ボケの例.md
@@ -74,3 +74,9 @@ https://dekirukaiwajutu.com/category2/
 どぎつい偏見。「家に間接照明ある男、だいだいクズ」とか。
 
 勢いのある場面で関係ない視点を挟むボケ。
+
+言葉のボケだけじゃなくて、動きとかもある。
+
+矛盾した言葉のボケ:
+
+「生き延びねーとぶっ殺すぞ！」
