--- a/shared/collaboration/organization/hierarchy/身分.md
+++ b/shared/collaboration/organization/hierarchy/身分.md
@@ -11,3 +11,5 @@
 身分制度があっても期限を設けたりすると無能が居座り続けるのは避けられる。身分制度の問題は無能でも上司になれてしまうところなので、無能を排除する仕組みがあれば身分制度であってもうまく機能する。それを身分制度と呼べるかどうかはともかく。
 
 身分が高い者は能力が高いから身分が高いのではなく、高い能力を求められるから身分が高い。能力が低かったら殺されなければならない。
+
+感染症は全人類に平等だ。身分制度によって医療が広く行き渡らないと感染症が広がって結局みんな死ぬ。
