--- a/shared/government/administration/医療制度.md
+++ b/shared/government/administration/医療制度.md
@@ -1,2 +1,4 @@
 集団にとって医療がプラスになるのは、怪我や病気で離脱した生産人口を生産の場に戻したときだけ。
 生産の場から離れた年寄りを生かしてもマイナスにしかならない。
+
+どうせ死ぬ犯罪者をわざわざ生かしてリソースを消費するのは医療従事者として正しい行いではない。おそらく偽物だ。
