--- a/shared/people/人間扱い.md
+++ b/shared/people/人間扱い.md
@@ -4,3 +4,5 @@
 
 出生率の下がった先進国で「いくらでも代わりがいる」は通用しない。
 海外から安い労働力をとってくるとしても、待遇が悪かったら当然他の国に行く。
+
+公共施設に通ってると、順番通りに本を棚に戻せないレベルの生き物もいるのがわかる。子供はもちろん、大人にもいる。
