--- a/shared/singing/tips/ミックスボイスは気にしない.md
+++ b/shared/singing/tips/ミックスボイスは気にしない.md
@@ -13,3 +13,6 @@
 本来は地声で柔らかく高い声を出すべき。
 ただ、凡人がそうしても裏返るので、初めから息をある程度漏らして裏返して響きを揃えるのがいわゆるミックスボイス。はっきり言えば妥協でしかない。
 どうせ練習するならミックスボイスではなく地声の範囲をただ広げれば良い。声帯を伸ばして、強い呼吸で歌う。
+
+ミックスボイスは妥協。
+声帯を伸ばして高い声が出ないから声帯に力を入れて、そのままでは硬い声になるから息を混ぜて硬さを抑えている。
