--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -78,3 +78,7 @@ http://hira0888.life.coocan.jp/asu124.html
 正しい声の出し方ではないけど、絶妙なバランスで良い声になっている場合がある。
 ミセスは鼻声だし、アイナ・ジ・エンドは声が細かく震えてるし、優里やAdoはずっとがなってる。それでも良い声。
 天性のものなので、他の人が真似してもうまくいかない。もしかしたら自分に合う場合もあるけど、合わなかったらやめるべき。
+
+良い声を表すのに「倍音」とか「響き」とか人間にコントロールできない概念を用いても意味がない。そもそも喉の形で先天的に決まる部分も大きい。
+
+良い声とは、強い息の声だ。息の強さは鍛えられるしコントロールできる。
