--- a/shared/achievement/実績.md
+++ b/shared/achievement/実績.md
@@ -174,3 +174,5 @@ executionの積み重ね。個々の実行はexecutionとして考える。
 実績のためには、できないことをなくしてから公開するのでは遅い。
 とにかくできることで始める。
 例えば漫画だったら、自分が描ける顔の角度だけでコマを区切るとか、背景をできるだけ描かないとか。
+
+実績は信頼に繋がる。
