--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -144,3 +144,18 @@
 メロディは譜面を曲の速度で辿るのがそれはそれで慣れが必要。
 
 いきなり全部覚えようとせずに、とりあえずサビだけ覚えるのも大事。まずは雰囲気歌えるようにする。
+
+パートごとに覚えていく段階:
+
+1. サビを覚える
+2. ブリッジを覚える
+3. その他のメロディを覚える
+
+発音に慣れていく段階:
+
+1. ハミングで歌う。
+2. リップロールで歌う。
+3. sだけで歌う。
+4. 一音だけで歌う。（uhとかlaとか）
+5. 母音だけで歌う。
+6. 子音も載せて歌う。
