--- a/shared/voice/training/issues/喉が締まる.md
+++ b/shared/voice/training/issues/喉が締まる.md
@@ -1,3 +1,10 @@
+喉声。
+
+以下のどちらか。
+
+- 声帯に力が入っている
+- 気道を絞って息を強くしている
+
 喉が締まっている声の特徴
 
 - 声が枯れやすい
@@ -21,3 +28,5 @@ https://youtu.be/HibuKCqBJzs?si=2mzDCIyyuIc7i31m
 張り上げとか、喉を締めて引き攣ったような声を出さないといけないのは、根本的に息の圧が足りてないせい。腹で息の圧を高められてないから、喉を締めて高めないといけなくなる。水の出るホースの口を抑えて水圧を上げるのと同じ。
 
 喉で絞るような呼吸で歌ってしまうと、強い息を使うのに「溜め」が必要になる。
+
+喉声にも、声帯に力が入ったものと、気道を絞って息を強くしているものがある。
