--- a/shared/voice/training/issues/声が通らない.md
+++ b/shared/voice/training/issues/声が通らない.md
@@ -1,10 +1,12 @@
-- 声がこもる
+要因:
 
-通らない声、こもった声、というのは声の通り道を塞いでいる。
+- 声が小さい
+  - 息が弱い
+  - 声がこもっている
+    - 口が開いていない
+    - 舌が下がっている
+- 声の響きが軽い
 
-こもった声の原因は、
-口が開いていない、
-舌が下がっている、
-声が小さい、
-など。
-なんらかの原因で音の通り道を塞いでしまっている。
+こもった声はなんらかの原因で音の通り道を塞いでしまっている。
+
+声の響きが軽いというのは、声に混ざっている周波数が少なくて、周りの音にかき消されやすいということ。
