--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -76,9 +76,11 @@ http://hira0888.life.coocan.jp/asu124.html
 良い声を出す練習というのは、息を強くして、喉で邪魔しないための練習。せっかく息が強くても喉が締まって邪魔したら生かしきれない。
 
 正しい声の出し方ではないけど、絶妙なバランスで良い声になっている場合がある。
-ミセスは鼻声だし、アイナ・ジ・エンドは声が細かく震えてるし、優里やAdoはずっとがなってる。それでも良い声。
+ミセスは鼻声だし、アイナ・ジ・エンドは声が細かく震えてるし、優里やAdoはずっとがなってる。それでも良い声。良い
 天性のものなので、他の人が真似してもうまくいかない。もしかしたら自分に合う場合もあるけど、合わなかったらやめるべき。
 
 良い声を表すのに「倍音」とか「響き」とか人間にコントロールできない概念を用いても意味がない。そもそも喉の形で先天的に決まる部分も大きい。
 
 良い声とは、強い息の声だ。息の強さは鍛えられるしコントロールできる。
+
+雑音の多い汚い声でもバランスが良いと良い声になる。
