--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -66,3 +66,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 ハモリは、上ハモ、下ハモ、ずらし、に分ける。メインメロディを上か下にずらしたものと、それ以外。ずらしはメインメロディと違うメロディで歌う。
 
 ハモリは雑音が少ない声で歌わないと点描の唄みたいにバラバラな感じになる。雑音が多い声も個性だけど、ハモリには向いてない。
+
+雑音の多い声は多くの周波数が混ざっているのでハモリに向かない。ハモる前から混ざっている。
