--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナイン.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナイン.md
@@ -1,4 +1,4 @@
-## 基本
+## 基本システムのポイント
 
 - 4回以降で走者2塁以上、7回以降で走者1塁以上、でプレイヤー操作になる。
 
@@ -25,6 +25,8 @@
 ただし、実際のチームとしては走力の高いチームの方が安定する。
 
 結局、大会で優勝するかどうかは、内気の枚数しか関係ない。内気の枚数が多かったら勝てる。
+
+夏の地区大会はお褒めの言葉を使わなくてもいいように投手多めのメンバーにする。2年生もできれば多めにスタメンにするか、試合で積極的に交代する。
 
 ## 進行
 
