--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -193,3 +193,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 
 喉は首の力で下げる。顎や舌の力で下げると欠伸みたいなこもった声になる。
 喉を広げて、でも喉に力は入れない。喉を狭くする要因を排除する。
+
+sで長く発声したままため息を吐くように声を出す練習。
