--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
@@ -63,6 +63,14 @@
 
 栄冠は投手能力がどれだけ高くても野手の守備能力が低いと失点しやすい。そもそも結構当てられるので拾えないといけない。
 
+内気の3年生がいる場合、その一つ前に注目選手を持ってくると魔物のタイミングを決めやすい。
+
+## 試合開始直後
+
+- 総合戦力を見る
+- 捕手の肩力と送球を見る
+- 投手のクイックを見る
+
 ## 伝令
 
 攻撃伝令に送ると守備伝令で同じ選手を使えなくなる。攻撃伝令では守備に出るメンバーから使っていくといい。
@@ -104,6 +112,15 @@
 対応する青特があるのに7になってないのは怪しい。
 
 ### 試合に勝つための戦術（守備）
+
+7でもあまり信用できない:
+
+- くさいところ
+- 打たせてとれ
+
+というか、そもそも投手の7はあまり信用できない。普通にホームランか三振で極端な結果になりやすい印象。
+
+流し打ち警戒の外角中心はわりと信用できる。
 
 投手の戦術は外角と低めが強くて、ホームランになりにくい。
 あとはストライクにするかボールにするか、直球か変化球か、の違いでしかない。カウントが良かったらくさいところでボール球を振らせるのも強い。
@@ -254,6 +271,10 @@
 練習試合も経験値が低いので、信頼度を優先してもいい。
 
 点差に余裕があれば犠牲フライで弾道経験値を稼ぎたい。
+
+## 盗塁
+
+走者の盗塁と投手のクイック、走者の走力と捕手の肩力を比べて判断する。
 
 ## 魔物
 
