--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -86,3 +86,7 @@ Mercy、情、情け、赦し、恵み。
 自分を愛せない人は他人も愛せなくなりがち。
 
 行動を伴わない、あるいは責任を負わない優しさや甘さはむしろ相手の害になる。情がない。
+
+道具を長く使いたいと思ってもメンテナンス方法がわからないと早く壊れてしまう。
+
+道具を長く使うのもcareの一種。
