--- a/shared/coaching/コーチング.md
+++ b/shared/coaching/コーチング.md
@@ -1,3 +1,11 @@
+## コーチングとは
+
+対象を成功に導くこと。
+
+そのために、成長を促したり、実績を積ませたりする。
+
+## その他
+
 相手を成長させること。
 
 文化を継承するためにある教育とは異なる。
@@ -91,3 +99,7 @@ management 的に成功させるというよりは、achievement 的に目標を
 「え？もしかしてあんなにでかい口叩いておきながら結局お前上手い人に囲まれてじゃないと何もできないの？」『悪いが私は百合じゃない』
 
 コーチングとして楽しませるのも大事だけど、最終的に自分で楽しみを見つけられない人はどうしようもない。
+
+教育や指導はコーチングの手段でしかない。
+
+https://baigie.me/nippo/2024/09/30/managermission_sasaki/
