--- a/shared/computer/operation/typing/タイピングゲーム.md
+++ b/shared/computer/operation/typing/タイピングゲーム.md
@@ -1,5 +1,21 @@
 # タイピングゲーム
 
-[寿司打](http://typingx0.net/sushida/)
+## 寿司打
 
-[e-typing](https://www.e-typing.ne.jp/)
+http://typingx0.net/sushida/
+
+シンプル。
+
+## e-typing
+
+https://www.e-typing.ne.jp/
+
+様々なテーマが用意されている。
+
+## UnTyping
+
+https://untyping.jp/
+
+プログラミング言語ごとに頻出する定型文が出題される。
+
+https://qiita.com/renesisu727/items/2eddd4f0eec80e3d5815
