--- a/shared/decision/planning/バッファ.md
+++ b/shared/decision/planning/バッファ.md
@@ -2,3 +2,5 @@
 
 バッファは全体で管理する。個別にバッファを持たない。
 チームのタスクも同様。個々のタスクにバッファを取るのではなく、全体でバッファを管理する。
+
+バッファを全体で管理するためには、個々のタスクが遅れることを責めてはいけない。そもそもそれも織り込んで全体の計画を立てているのだから、もし個々のタスクが遅れることを責めないといけないならリーダーが責められるべき。
