--- a/shared/management/マネージャーの仕事.md
+++ b/shared/management/マネージャーの仕事.md
@@ -1,7 +1,12 @@
-1. （自分、顧客や上司の）成功に寄与する
-2. 人を維持・活用する
-3. 人を育てる
-4. 組織やチームを育てる
+- （自分、顧客や上司の）成功に寄与する
+- 人を維持・活用する
+- 方針を決める（ディレクション）
+- 組織を育てる（チームビルディング）
+  - 人を集める
+  - 文化を作る
+- 部下を育てる（コーチング）
+  - 成長させる
+  - 実績を積ませる
 
 https://x.com/tommygfx90/status/1727087451850899654?s=20
 
@@ -14,3 +19,8 @@ https://x.com/tommygfx90/status/1727087451850899654?s=20
 
 マネージャーに求めること
 https://x.com/yuuuu19860221/status/1815242336831705469
+
+成長する気がないと成長しない。
+動かない人は動かない。
+
+動かない人を切り捨てるというよりは、動く人を優遇して、それ以外は放っておく。
