--- a/shared/society/tips/褒め言葉を受け取る.md
+++ b/shared/society/tips/褒め言葉を受け取る.md
@@ -1,3 +1,11 @@
+まずは「ありがとう」でいい。
+
+褒めてくれることに感謝する。
+
+- 褒めてくれてありがとう
+- 気づいてくれてありがとう
+- 褒め方が上手だね
+
 そもそも褒めているかどうかわからない場合、「それって褒めてるの？笑」と直接聞いてしまってもいい。
 
 褒め言葉は実感がなくても他者から見た事実として考える。自分では良いと思ってなくても、相手が褒めているつもりなら価値があると考える。
