--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -404,3 +404,6 @@ learning, thinking, training, なども成功を目的としたもの。
 「尊敬できる人に会えることが増えたなら、正しい方向に進んでいるサイン」（出典不明）
 
 「成功とは学びの過程なんだよ。」『CHANCE』
+
+不確実性を段階的に消していくことで成功に近づく。
+情報を集めるだけでなく、検証することが重要。
