--- a/shared/commerce/marketing/channels/イベント.md
+++ b/shared/commerce/marketing/channels/イベント.md
@@ -73,3 +73,5 @@ https://www.kokuchpro.com/
 イベントなどで集まる場所はトイレをきれいにする。
 
 イベントは「N人以上集まるなら行く」みたいな人もよくいる。最低人数を明確にすることで誘引しやすくなる。
+
+カラオケイベントは名札代わりに養生テープにマジックで名前を書いてコップに貼ってもらうのが便利。コップわからなくなりがちだし。
