--- a/shared/home/家庭.md
+++ b/shared/home/家庭.md
@@ -1,6 +1,6 @@
 # 家庭
 
-仕事、Workとの対応関係。
+職場、Workとの対応関係。
 
 「家」は人が幸せになるためのもの。
 人が幸せになれない「家」なら潰してしまえばいい。
@@ -13,3 +13,5 @@
 「家庭的」というのは、家庭で頼りになる、ということ。
 
 ホームは安らぎを与える場所であるべき。
+
+ホームは安らげる場所、安息の地でないといけない。
