--- a/shared/human/being/生存.md
+++ b/shared/human/being/生存.md
@@ -14,3 +14,5 @@ health, wealth, security なども参照。
 良い生活以前にまず生存を考えないといけない。Beingの段階。
 
 生存は生殖の手段に過ぎない。
+
+beingは存在というよりも「そうある」ということ。実在しない場合もある。特別であること、他から切り離された個であること、識別されること。
