--- a/shared/management/マネージャーの仕事.md
+++ b/shared/management/マネージャーの仕事.md
@@ -24,3 +24,6 @@ https://x.com/yuuuu19860221/status/1815242336831705469
 動かない人は動かない。
 
 動かない人を切り捨てるというよりは、動く人を優遇して、それ以外は放っておく。
+
+マネージャーに必要な活動はあらゆることが対象になるので、得意なことや効率が良いことに絞って活動しないとキリがない。
+補佐を置いたりする場合もある。
