--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -82,3 +82,5 @@
 まぁ、声を硬くするよりは裏声の方がいい。
 
 声が裏返らないように高音を出す練習は続ける。
+
+地声のまま高音を出すのはサイレンのイメージ。滑らかに響きが変わらないまま高音に向かう。途中でガクッと上がったり響きが変わったりすると裏返っている。口は大きく開ける。
