--- a/shared/care/responsibility/tips/自由.md
+++ b/shared/care/responsibility/tips/自由.md
@@ -94,3 +94,5 @@
 自由に生きるためには暴力と財力の両面を備えないといけない。誰かに援助されずとも、妨害されたとしても、生き残ること。そうすれば誰かの思惑に左右されることもない。
 
 自由を求めてしまうと自由ではない。自由は「ある」ものでしかない。
+
+人間の本能や自然に逆らっているからこそ自由でかっこいい。たかが常識や法律なんかに逆らってもかっこよくない。自然に逆らわなければ自由とは言えない。
