--- a/shared/management/マネージャーの仕事.md
+++ b/shared/management/マネージャーの仕事.md
@@ -27,3 +27,5 @@ https://x.com/yuuuu19860221/status/1815242336831705469
 
 マネージャーに必要な活動はあらゆることが対象になるので、得意なことや効率が良いことに絞って活動しないとキリがない。
 補佐を置いたりする場合もある。
+
+企業においてマネージャーが行うべきコーチングの方向性としては、まず、部下の給与を上げること。そのために教育して、実績を積ませる。
