--- a/shared/action/体力.md
+++ b/shared/action/体力.md
@@ -1,4 +1,4 @@
-旅行によく行くのは、体力が多い人の特徴でもある。
+体力旅行によく行くのは、体力が多い人の特徴でもある。
 
 疲れているのと、体力がないのは対処が違う。
 体力がないのに疲れを取ろうとしても意味がない。
@@ -20,3 +20,5 @@
 - 内臓（特に消化器）が弱い。
 - 日光に弱い。
 - 肺活量が少ない。
+
+行動には気力と体力が必要。
