--- a/shared/singing/tips/音程を合わせる.md
+++ b/shared/singing/tips/音程を合わせる.md
@@ -61,3 +61,8 @@ https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
 
 まずは最低音が標準で、そこから上げることで高い音を出す。
 変なところを標準にして、上げたり下げたりしようとするのは不安定になりやすい。
+
+カラオケの音程バーを信用しすぎない。
+
+「もはや、音程バーの方が下手くそ」
+https://youtu.be/LKITeNhys-M?si=vqaLTTu2q2QdtMvl
