--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -1,12 +1,20 @@
 ## 概要
 
-- 一部の技をハイジャンプでキャンセルできる
-- バーニングキックでジャンプの軌道を変えられる
-- インパクトが長い
-- 打撃当て身がある
-- SA以外の完全無敵技がない
-- 対空無敵技の発生が少し遅い (7F)
-- 中足を必殺技キャンセルできない
+- 操作が難しい
+  - 一部の技をハイジャンプでキャンセルできる
+- ステップが遅い (21F)
+- 攻めが強い
+  - 火力が高い
+  - 起き攻めの状況が良い
+  - ジャンプとハイジャンプを使い分けられる
+  - バーニングキックでジャンプの軌道を変えられる
+  - バーニングキックで投げやしゃがみ攻撃を避けて攻撃できる
+  - インパクトが少し長い
+- 守りが弱い
+  - 発生の早い技が短い
+  - 対空無敵技の発生が少し遅い (7F)
+  - SA以外の完全無敵技がない
+  - SAがどれも短い
 
 ## 技
 
@@ -53,7 +61,15 @@
 
 ## モダン
 
+- 火力が落ちる
+  - 確反やコンボの繋ぎに使うHKがない
+- 起き上がりにガードさせて有利になるMPがない
+- 暴れからコンボにしやすい2LPがない
+- 弱攻撃のラッシュから2HPに繋がるDR 2LPがない
+
 ヴァイパーはモダンでもかなり強い。
+AC3のおかげで2HPからの基本コンボをミスらないのも強い。
+ただ、SAが短いので見てから弾抜けや暴れは難しい。
 
 MPは2HPでもいいし、HKがなくても火力が落ちるだけで立ち回りはそう変わらない。対空というか起き攻めのジャンプ潰しがないのはちょっと不便だけど、なんとかなる。2LPも短すぎて使いづらいし。
 
