--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -797,3 +797,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 ビジネスの基礎は奉仕の心。社会貢献。
 
 「言うことがデカくて壮大で、やることが愚直。そういうタイプが成功する。」（藤田晋　サイバーエージェント社長）
+
+ビジネスに求められる価値は社会貢献だが、企業のファイナンスだけに目を向けてしまうと、その製品の社会的な効用よりも儲けを見てしまう。
