--- a/shared/change/history/tips/歴史を学ぶ.md
+++ b/shared/change/history/tips/歴史を学ぶ.md
@@ -1,2 +1,20 @@
 歴史は全体から部分に進みながら理解するのが重要。
 世界史であればまず世界的に古代から現代まで主に何があったのか理解してから、さらに各時代や各地域の歴史を知る。
+
+歴史で学ぶべきなのは、
+
+- 国家
+  - どの地域にどんな国が興って、亡んだか
+  - どの時代にどんな国が興って、亡んだか
+- 国家の興亡
+  - 建国
+  - 外交
+    - 同盟
+    - 戦争
+  - 内政
+  - 滅亡
+- 人物
+- 発明
+
+時代は地域ごとと、全体でそれぞれ対応したい。
+近代になると世界は狭くなって一つの時代になった。
