--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -178,3 +178,5 @@ discovery, 発見・探索も関連する。
 開発の目標は発達であり、もっというと卓越。周りに埋もれてしまってはいけない。まぁ、最低限周りに追いつくところから始まるのもまた事実。
 
 より良いもの、優れたものを探求する。
+
+開発に必要なのは最良を目指すことであって、スクラムなどの開発手法も必ずしも最速でなくていい。
