--- a/games/Street-Fighter/差し合い.md
+++ b/games/Street-Fighter/差し合い.md
@@ -1,3 +1,8 @@
+- 牽制
+  - 当て: ガードさせて動きを止める
+  - 置き: カウンターを狙う
+- 反撃（差し返し）: 見てからパニッシュカウンターを狙う
+
 地上戦。
 
 差し合いの目的は「攻めに転じる」こと。
@@ -76,3 +81,5 @@ https://youtu.be/wNKJnScQduo?si=4ljViRwEFvPreHH6
 差し合いはまずお互いに差し返しを狙うのが基本。ラッシュなどで無理やり触ろうとしてくるなら見てから止めたり、確反を狙ったりする。
 
 差し合いは待ちが強いけど、何もしないと相手に攻撃を当てられてドライブゲージや体力を削られる。
+
+相手の牽制を掻い潜って接近しても、安易に手を出してはいけない。相手の牽制に差し返せる距離を作った上で、相手の隙を作る。
