--- a/shared/achievement/growth/成長.md
+++ b/shared/achievement/growth/成長.md
@@ -67,3 +67,7 @@ achievement の文脈から development を見たもの。
 能力や実現可能性という考え方。
 
 「人様をナメるな！！いつまでもダメな人間などいない！！」『天のプラタナス』
+
+> 巨大な力を纏わねば、大きな敵に対抗出来ない。
+> しかし、その巨大な力の中では、強い自分を得る事が難しい。
+> 『境界線上のホライゾン』
