--- a/shared/computer/software/application/features/通知.md
+++ b/shared/computer/software/application/features/通知.md
@@ -24,3 +24,5 @@ https://progzakki.sanachan.com/technology/server-push-technology/
 通知を切るために退会する人がいるので、通知は設定で切れるようにしないと離客率を上げてしまう。
 
 通知機能はあると何かと便利。単に内部の広告のように新機能やイベントを通知してもいいし、アカウントの削除予告とかもある。
+
+「このメッセージを通知しない」のチェックはたまにあるけど、UIとして良くはない。むしろ「このメッセージを再度通知する」というチェックかモーダルにするべき。yesでないならもう通知しない。
