--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -163,7 +163,6 @@ discovery, 発見・探索も関連する。
 資源を強化する。
 
 開発は「やったことがないことをやる」のが仕事。
-
 悪くなってなくて、少しでも良くなったと感じているならそれで十分。少しずつでも進歩できている。進捗が足りないと思ったら量を増やせばいいだけ。
 しかし、むしろ悪くなったと感じているならやり方を変えるべき。練習の質が悪い。
 
@@ -180,3 +179,5 @@ discovery, 発見・探索も関連する。
 より良いもの、優れたものを探求する。
 
 開発に必要なのは最良を目指すことであって、スクラムなどの開発手法も必ずしも最速でなくていい。
+
+規格が決まっているものはそれに向かって一直線に作るだけでいい。開発の余地がない。開発というよりは、規格通りに製造するだけ。
