--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -163,3 +163,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 少年時代なんかは伴奏がシンプルすぎて歌唱力がもろに出てしまう。
 
 歌には反射神経が必要。伴奏の音を聞いて、その場で合わせるのが一番いい。
+
+歌は基本的に伴奏とハモっている。あるいは歌に伴奏がハモっている。
