--- a/shared/singing/tips/ミックスボイスは気にしない.md
+++ b/shared/singing/tips/ミックスボイスは気にしない.md
@@ -16,3 +16,6 @@
 
 ミックスボイスは妥協。
 声帯を伸ばして高い声が出ないから声帯に力を入れて、そのままでは硬い声になるから息を混ぜて硬さを抑えている。
+
+声が裏返るのを誤魔化すのが上手くなるよりも前に、そもそも裏返らないように鍛えるべきではある。
+ただ、裏声を誤魔化す方が簡単なので、まずは誤魔化せるようになっておいて、練習では裏返らないようにじっくり鍛えていくのも悪くはない。裏返らないように鍛えるのは時間がかかる。
