--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -9,6 +9,12 @@
 
 喉を下げる方法は「喉を下げる」を参照。
 
+## 喉を広げる前提条件
+
+- 息が強い
+
+息が弱いまま喉を開いても声にならない。まずは息を強くするのが先。むしろ息が弱いから喉が締まる。
+
 ## 喉が下がった声
 
 フランコ・コレッリ、ヨーゼフ・メッテルニヒ、ビルギット・ニルソン、チェーザレ・シエピの例。
