--- a/shared/voice/training/tips/強い声を出す.md
+++ b/shared/voice/training/tips/強い声を出す.md
@@ -26,4 +26,6 @@ http://hira0888.life.coocan.jp/asu124.html
 
 スキマスイッチは声帯の張力低めで、息だけ強くして張るとそれっぽい。あと肺活量があるのでブレス足りなかったらどっかで切るしかない。
 
-Da-iCEのCITRUSは意外と強い息で歌っている。
+Da-iCEのCITRUSは意外と強い息で歌っている。裏声ではあるけど。あるいはがなりというべきか。
+
+息は強くするけど、声はむしろ柔らかくする。声が硬くなるのは息が強くなってない。
