--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -84,3 +84,7 @@ http://hira0888.life.coocan.jp/asu124.html
 良い声とは、強い息の声だ。息の強さは鍛えられるしコントロールできる。
 
 雑音の多い汚い声でもバランスが良いと良い声になる。
+
+鍛えてないと、声が大きく高くなるほど硬くなるか、硬くなった声を息漏れで誤魔化すかどちらかになる。
+
+声が大きいのは良いことだが、硬い声では完全に良い声とは言えない。大きく、高くなっても柔らかい声を目指す。
