--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -799,3 +799,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 「言うことがデカくて壮大で、やることが愚直。そういうタイプが成功する。」（藤田晋　サイバーエージェント社長）
 
 ビジネスに求められる価値は社会貢献だが、企業のファイナンスだけに目を向けてしまうと、その製品の社会的な効用よりも儲けを見てしまう。
+
+活動としてはworkに近いけど、人相手のことなのでcareの精神が大事。
