--- a/shared/life/命の意味.md
+++ b/shared/life/命の意味.md
@@ -1,3 +1,5 @@
+本質的には、生存は生殖の手段でしかない。
+
 命に意味はなくていい。
 意味というのは、何かの手段、使われるものということだ。
 命は何かの手段として存在するわけではない。命はそれ自体が目的だ。
@@ -11,3 +13,10 @@
 
 「やりたいこと」がなくてもいい。
 自分の命を何かの手段にしなくていい。
+
+誰かの役に立つことで生きる意味を得る。
+ただ、生きるために意味がいらないことに気づくと、誰かの役に立つ必要性もなくなる。
+
+「生きている意味がないならば、これからいくらでも色んなもののために生きていいはずなんだ」（『六姫は神護衛に恋をする』）
+
+相手の人生に意味があるかどうかは、こちらが決められる。相手の言動を受け取って意味があるものにするか、受け取らずに意味のないものにするか、自分で決めよう。余程の害があると思ったら意味があると考えて殺してもいいし、毒にも薬にもならないと思ったら受け取らずに生きている意味のない人として扱ってもいいし。
