--- a/shared/human/being/well/tips/楽に生きる.md
+++ b/shared/human/being/well/tips/楽に生きる.md
@@ -1,1 +1,8 @@
 楽に生きるにはまず家賃を安くしないといけない。でも交通費や光熱費が上がっては元も子もない。
+
+1. 実績を重ねる
+2. 他人を巻き込む
+3. 他人を助ける
+4. 知識や経験を隠さない
+
+https://qiita.com/Takashi_Masumori/items/f0e7142c57762821e3e0
