--- a/shared/documentation/tips/ナレッジの整理.md
+++ b/shared/documentation/tips/ナレッジの整理.md
@@ -77,3 +77,5 @@ explanationは、原則としてどうするか、なぜそうするか、どの
 記事が小さすぎるなら用語とかは一つの記事でもいいかも。
 
 ナレッジとまとめるときにどういうトピックがあるか、どの単位で記事にするかは重要。見出しをよく考える。
+
+ナレッジで重視しているのは、知識の関連性。親子関係とか、基礎と応用とか。
