--- a/shared/finance/accounting/会計.md
+++ b/shared/finance/accounting/会計.md
@@ -1,7 +1,5 @@
 # 会計 Accounting
 
-経理
-
 収支の記録や報告。
 
 経済的なトランザクションや財務情報の処理、記録、報告を行う。
@@ -21,3 +19,5 @@
 ファイナンスを定量的に評価する。
 
 ダイエットのために体重を測るのと同じで、できるだけ早く結果が見えたほうが学習や改善するモチベーションに繋がりやすい。
+
+単に記録するだけではなくて、財務を可視化するために、PLやBSなどの会計手法を日常的に使うこともある。
