--- a/shared/finance/財務.md
+++ b/shared/finance/財務.md
@@ -1,5 +1,7 @@
 # 財務 Finance
 
+調達、原資。
+
 資産管理だけではない。
 
 財務の状況を「ポートフォリオ」として表すことがある。
@@ -56,3 +58,13 @@ business だけでなく、community でも finance は必要。
 利益を追求するための経済活動。
 
 貯金があっても、収入が安定しないと財政的に不安。
+
+資源面の持続可能性。
+何かの活動を続けていくために、ファイナンスは欠かせない。
+
+広義には、資金だけでなく、設備や材料の調達も含まれる。まぁ、資金を使って行うと考えれば資金に集約されると考えることもできるか。
+
+ファイナンスはあくまでも活動を続けるための手段。
+まぁ、金儲けをゲームみたいに趣味としている人もいるけど。その場合、あくまでも趣味の範疇にして、沼にハマるのは避けるべき。
+
+余裕がなくなるとファイナンスばかり見て本来の活動がおそろかになりがち。
