--- a/shared/love/愛する技術.md
+++ b/shared/love/愛する技術.md
@@ -47,3 +47,5 @@
 誰かと関係を続けるために重要なのが、愛と情。
 
 お金をかけるのは愛情ではない。投資。愛情を示すなら、自らの手を汚さなければならない。直接的な関与でしか愛情は示せない。
+
+愛していても、守ったり、愛情を示したりしないと長続きしない。壊れたり、離れたりする。
