--- a/shared/business/事業.md
+++ b/shared/business/事業.md
@@ -1,5 +1,7 @@
 # 事業 Business
 
+社会的に大きな仕事。社会貢献。
+
 利益を出すための活動。シノギ。
 
 自社にどのような事業があるか、把握しておかないと、精密な財務状況も把握できない。
@@ -34,3 +36,6 @@ https://toyokeizai.net/articles/-/509761
 本業と副業。
 
 実業と虚業。
+
+事業が先、経営が後。
+まず事業があって、そのための経営、マネジメントやファイナンスを行う。金儲けが目的になってはいけない。
