--- a/shared/politics/conflict/戦争.md
+++ b/shared/politics/conflict/戦争.md
@@ -9,3 +9,18 @@
 
 交渉に失敗すると戦争になることがある。戦争の勝ち方も考えておかないといけない。
 また、ただ勝つだけでなく、損失を抑えて利益が出るように勝たないといけない。
+
+衝突の全てが戦争ではない。
+
+建設的な意見を交わすとか、プラスになる衝突もある。
+
+戦争は、競合を解決するための強引な衝突のこと。
+
+強引に競合を解決しようとしても強く抵抗される。
+
+同じ目的を持って、現状をより良くするための建設的な衝突は推奨されるべき。
+
+他人と意見が違うなんて当たり前だから違う意見を出すのに躊躇がない人もいる。
+逆に他人と意見が違うと気になって意見が出せない人もいる。
+
+- 誰かと意見がぶつかったら、どのように対応するか
