--- a/shared/conflict/争い.md
+++ b/shared/conflict/争い.md
@@ -1,6 +1,10 @@
 # Conflict
 
+「敵」としての関係。
+
 競合、競争。
+
+個人間の利害の不一致。
 
 争いを避けるのはコストやリスクが高いからであって、争いを避けることでそれ以上のデメリットがあるなら避けられない。
 
@@ -13,7 +17,6 @@
 
 敵。
 
-利害関係の不一致。
 競争も競合のために起こる。
 
 競合はほとんど解決できない。
