--- a/shared/love/人を選ぶ.md
+++ b/shared/love/人を選ぶ.md
@@ -6,3 +6,9 @@
 特に子どもを誰かと比較するべきではない。
 
 優しいというのは単に人当たりが良いこと。情や思いやりがあるとは限らない。恋人や友人にするなら優しい人よりも情がある人。優しいだけの人を選ばない。
+
+まずは選べるくらい多くの知人を作らないといけない。
+良い人とだけ知り合うというのは無理。
+多くの人と知り合った上で、友人として付き合っていく人を選ぶ。
+
+まずはとにかく知人を増やそう。
