--- a/shared/society/tips/社交を楽しむ.md
+++ b/shared/society/tips/社交を楽しむ.md
@@ -8,3 +8,7 @@
 中でもビジネスと福祉は実利もあるところ。
 あとは趣味の仲間を増やして複数人で遊べる趣味ができるとか、お互いに情報を共有できて便利とかもある。
 社交がきっかけで新しい仕事や趣味を始めることもある。
+
+人と会うのを楽しむためには、自分の話をするべき。
+相手に好かれるとか好かれないとか、その時点ではどうでもいい。
+そのためには、誰かに語れることを用意しておく。メジャーなのは、過去の体験とか、推しのこととか。
