--- a/shared/people/個人の集まり.md
+++ b/shared/people/個人の集まり.md
@@ -1,4 +1,8 @@
 # People
 
+複数の個人。
+
 `people`と言った時は個人に焦点がある。
 対して、`society`といった時はもっと集合的というか、全体のシステムや関係性に焦点がある。
+
+peopleは必ずしもお互いに関係があるわけではない。複数の個人。
