--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -5,3 +5,24 @@
 関心を持つために想像する。
 
 顔を覚えるために、顔を見て話す。
+
+主な観点:
+
+- 性別（男か女か）
+- 年代
+- 背の高さ
+- 体格（太っているか、痩せているか）
+- 声の高さ
+- 肌の色（濃いか、薄いか）
+- 誰に似ているか
+- 顔の印象の強さ
+- 目の大きさ
+- 瞳の色
+- 眉の濃さ
+- 眉の太さ
+- 鼻の高さ
+- 口の大きさ
+- 唇の色
+- 髪の色
+- 髪の長さ
+- 性格の明るさ
