--- a/shared/government/democracy/公民.md
+++ b/shared/government/democracy/公民.md
@@ -2,3 +2,13 @@ Citizen
 
 政治に参加できる人々。
 参政権、特に選挙権や非選挙権があることをもって公民と呼ぶ。
+
+ほとんどの人は反知性的で非科学的だ。
+しかし、民主主義でそれを否定するべきではない。
+それ自体は肯定しつつ、良い国になる方針と方法を合意する。感情に寄り添った上で、自分が良いと思う政党を勧める。
+論理で詰めたら負け。ただ「私はこっちがいい」でいい。馬鹿だと思っても馬鹿にしない。
+
+民衆には力がある。誰かに従う必要などない。
+しかし、自分勝手に振る舞って和を乱せば、数の力を民衆として振るうことはできなくなる。誰かに従うのではなく、周りを敬う。
+
+民主主義が広まったのは民衆が真に力を得たから。民衆がいつでも君主を殺したり、国家を捨てたりできる時代になった。民主主義が良いものだからではない。ただ、結果的には悪くなかった。
