--- a/shared/finance/財務.md
+++ b/shared/finance/財務.md
@@ -68,3 +68,5 @@ business だけでなく、community でも finance は必要。
 まぁ、金儲けをゲームみたいに趣味としている人もいるけど。その場合、あくまでも趣味の範疇にして、沼にハマるのは避けるべき。
 
 余裕がなくなるとファイナンスばかり見て本来の活動がおそろかになりがち。
+
+何らかの活動を続けていく上で、financeが関係ない分野はない。
