--- a/shared/human/body/体を動かす.md
+++ b/shared/human/body/体を動かす.md
@@ -9,3 +9,11 @@
 
 人の体は日々変化する。
 体を動かす技術は、自分の体の変化に合わせてアップデートし続けないといけない。
+
+体を動かすには、感覚を掴まないといけない。
+
+一つ一つの部位を別々に動かす練習、ダンスでいうアイソレーションによって自由度が上がる。
+
+アイソレーションは意識して「動かさない」脱力の練習でもある。狙った部位だけを動かして、それ以外は動かさない。
+
+筋力がなくて動かせないというか、重力に逆らえないこともある。長期入院の後に立ち上がれないとか。体は重力に逆らっている。
