--- a/shared/success/trial/機会.md
+++ b/shared/success/trial/機会.md
@@ -39,3 +39,5 @@ Successの文脈におけるTimeの概念。
 「チャンスの神様には前髪しかない」というけど、そもそも神様の髪を掴もうとするのって失礼では？
 
 逃してはいけないタイミングがあって、どうにか間に合わせないといけない期限がある。
+
+機会も成功という概念を考えないなら別になくてもいいっちゃいい。
