--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -407,3 +407,6 @@ learning, thinking, training, なども成功を目的としたもの。
 
 不確実性を段階的に消していくことで成功に近づく。
 情報を集めるだけでなく、検証することが重要。
+
+思いがけない利益を成功とは言わない。思い通りになるのが成功。
+ただ、成功だった、と追認することはよくある。
