--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -373,3 +373,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 数百年、数千年続く伝統的な訓練方法の多くは科学的でもある。再現性がある。
 ただ、数十年くらいだと足りない。
+
+練習のベースとして、まず癖を抜く、「守」の工程が第一。
