--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -1,5 +1,13 @@
 # Harmony
 
+## 前提
+
+- 声の雑音を減らす
+- ベースの音程を正確に覚える
+- ハモリの音程を正確に合わせる
+
+## その他
+
 メインのメロディにキーをずらして重ねて和音を作るテクニック。
 
 ハモリはキー3つ上下させて歌うのがまず基本。和音になりやすい。
@@ -68,3 +76,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 ハモリは雑音が少ない声で歌わないと点描の唄みたいにバラバラな感じになる。雑音が多い声も個性だけど、ハモリには向いてない。
 
 雑音の多い声は多くの周波数が混ざっているのでハモリに向かない。ハモる前から混ざっている。
+
+まずは3度上のハモリが基本。
