--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -2,9 +2,12 @@
 
 ## 前提
 
+- 和音を一音ごとに認識する
 - 声の雑音を減らす
-- ベースの音程を正確に覚える
-- ハモリの音程を正確に合わせる
+- 音程を正確に覚える
+- 音程を正確に合わせる
+- 音程に合わせてピッチを正確に上げ下げする
+- メインメロディに釣られない（耳で音を聞いて、口では違う音を出す）
 
 ## その他
 
@@ -78,3 +81,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 雑音の多い声は多くの周波数が混ざっているのでハモリに向かない。ハモる前から混ざっている。
 
 まずは3度上のハモリが基本。
+
+普段から耳で聞いた音とは違う、ハモリの音を口に出す練習をする。和音を二つ以上の音として認識できるようにする。
