--- a/shared/decision/優先順位を設定する.md
+++ b/shared/decision/優先順位を設定する.md
@@ -1,7 +1,9 @@
-優先順位は「XXよりもXX」の形で設定するべき。
+優先順位は「Xが優先」ではなく、「Aよりも、Bが優先」というふうに比較で表現しないといけない。
 
 優先順位が先に設定されていることで、判断に迷わなくなる。
 
 判断に迷わないように設定しないといけない。
 
 優先順位を設定したのに判断に迷うようなら、設定方法が間違っている。
+
+何を優先するかは、重複がないように優先順位で設定するべきで、優先度ではいけない。同じ優先度のものを比較できないのでは判断が遅れる。
