--- a/shared/society/社会的な性別.md
+++ b/shared/society/社会的な性別.md
@@ -15,3 +15,9 @@ man/woman.
 でもそれで特別扱いされたいと思ってはいけない。
 
 ジェンダーというか、自分の性別が一致しないように感じるのは単に譫妄の一種。治したかったら精神病院に入って、そうでないなら気にせず過ごすべきだ。
+
+自認の性別なんかはせん妄でしかない。
+
+せん妄を尊重するかどうか。
+精神病院や介護施設なんかでは患者の妄想でも尊重して合わせてあげることもある。
+『がっこうぐらし』のゆきみたいな。
