--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -42,3 +42,7 @@ Wealth は福利や福祉の意味がある。
 愛されれば、生かされる。
 
 福祉を受け取るだけでは人は堕落してしまう。難民なんかもそう。救われる者にも努力を強いるべきだ。たとえば、暴漢から助けたら、トドメはその人に刺させる。
+
+福祉の恩恵を受けるには、自分も責任を果たすことで維持する。社会を維持することが福祉を維持することにつながる。
+
+誰かに守られること。
