--- a/shared/development/自分を知る.md
+++ b/shared/development/自分を知る.md
@@ -3,3 +3,5 @@
 - 初対面の印象は？
 
 自分探しをするのではなくて、今の自分が求めているものをはっきりさせる。楽したいのもそれはそれで目標だし、大きなことをしたいならそれなりの行動が必要だ。
+
+「頑張れば何かが見えるとそう思いますか　配点（自分）」『境界線上のホライゾン』
