--- a/shared/development/自分を知る.md
+++ b/shared/development/自分を知る.md
@@ -5,3 +5,5 @@
 自分探しをするのではなくて、今の自分が求めているものをはっきりさせる。楽したいのもそれはそれで目標だし、大きなことをしたいならそれなりの行動が必要だ。
 
 「頑張れば何かが見えるとそう思いますか　配点（自分）」『境界線上のホライゾン』
+
+自分を知る過程で、他人をどうやって、あるいは何を知ればいいかもわかる。
