--- a/shared/engagement/popular/好かれること.md
+++ b/shared/engagement/popular/好かれること.md
@@ -47,3 +47,6 @@
 好かれるということは、相手の好みにマッチするということでしかない。
 
 相手がどんな好みを持っているか探りを入れて、それとは別に好みに引っかかりそうなことをアピールする。
+
+信頼されても好かれるとは限らない。
+逆に、信頼されてなくても好かれることはある。
