--- a/shared/music/tips/リズムを取る.md
+++ b/shared/music/tips/リズムを取る.md
@@ -1,3 +1,5 @@
+まずは一定のテンポをキープするのがリズム感の基本。
+
 曲が遅すぎても難しい。ベースは120bpmと80bpmあたり。
 
 まずは60bpmでゆったり一定のテンポをキープできるようにするのが大事。遅くできないことは速くできない。朗読とかするといいかも。
@@ -7,3 +9,5 @@
 リズムはまず120BPMが基礎。これくらいの曲が多い。慣れてきたら60BPMと180BPMにも慣らす。60BPMはかなり遅くて、実際にこのテンポの曲はまずない。
 
 3拍子のリズムは3つとも大きめに体を揺らすくらいでいい。強中中くらい。
+
+まずは簡単なリズムから始めて、より複雑なリズムを扱えるようにする。
