--- a/shared/voice/tuning/tips/喉を守る.md
+++ b/shared/voice/tuning/tips/喉を守る.md
@@ -17,3 +17,9 @@
 寝起きとか喉が乾燥すると痛いなら外傷かも。声の出し過ぎとか。
 
 逆に、声を出して別に痛くない、唾を飲み込むと痛いとかは筋肉痛とか内側を痛めてるかも。
+
+https://youtube.com/watch?v=nK9rWAoVoPg&si=vLT3naEum60UN55i
+
+まずはうがい。
+白湯、ビタミン、のど飴などでウイルスの除去と保湿。
+加湿器は最低でも40%から50%くらいは保つ。
