--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -252,3 +252,5 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 腹で息を強くするより、喉で絞る方が楽だし簡単。でも良い声にはならない。
 
 体の中に空気を多く取り込んで、肋間筋や腹筋、背筋で外から内に圧をかける。
+
+息を強くしても太くしない。細くするというよりは、太くならないように抑える。太い息は息漏れに繋がるし、喉を痛める。
