--- a/shared/philosophy/examples/キリスト教/教会を信じない.md
+++ b/shared/philosophy/examples/キリスト教/教会を信じない.md
@@ -1,3 +1,5 @@
+# 教会を信じない
+
 教会はどこまでいっても人だ。
 
 人から離れ、神に寄り添うべき。
@@ -5,11 +7,9 @@
 神は死ななくても人は腐る。
 教会は人でしかない。
 
-サキュバスは神父による性被害を誤魔化すための説。
+サキュバスは神父による性被害を誤魔化すためのデマ。
 
 神を信じても教会を信じてはいけない。教会はヒトカスであって神ではない。
-
-聖書は世界一売れてるラノベ。
 
 教会は誰にもわからない死後の世界を質に取って脅迫する外道。
 
