--- a/shared/politics/tips/中立を守る.md
+++ b/shared/politics/tips/中立を守る.md
@@ -1,2 +1,6 @@
 明言を避ける、約束しない、というのも政治の手法ではある。
 対立を避けることにつながる。中立でいる。
+
+中立を守ってもむしろ潰されることはある。
+
+家を守ることを考えると、中立でいるよりは、家を二つに割って両方につくほうがいい。戦国時代なんかだとよくあった。
