--- a/shared/people/knowing/人を知る.md
+++ b/shared/people/knowing/人を知る.md
@@ -1,3 +1,10 @@
+人を知るためには、
+
+- 本人を観察する
+- 誰かからその人の話を聞く
+
+といった方法がある。
+
 - 体験
 - 知識
 - 上手なこと・下手なこと
@@ -59,3 +66,6 @@
 - 何を考えているか。
 - これからどうするか。
 - これまでどうしていたか。
+
+相手のことを知るには、まず恐れずに自分の弱みを見せるといい。
+警戒心を解くところから始める。
