--- a/shared/information/gathering/情報を集める.md
+++ b/shared/information/gathering/情報を集める.md
@@ -1,6 +1,15 @@
+二つの方法がある。
+
+- observation: 観察
+- communication: 伝聞
+
 オンラインにない情報は、オフラインで集めるしかない。
 お金を払って専門家に聞いたり、知り合いに聞いたりする。例えば土地だったら不動産屋とか。
 
 雑誌を見るのは本屋や図書館が便利。
 
 情報を集めるのもコミュニケーション。
+
+手持ちの知識から遠くて、新しいことばかりだと重い。インプットするのが億劫になる。
+
+情報は、事前に集めるだけでなく、現場で得た情報も判断に取り込まないといけない。
